# LittleDuck

./: .gitignore  LittleDuck_Chatbot_MVP_PRD.md  MISSION.md  WORKFLOW.yaml
agents/: coordinator.yaml  mission-owner.yaml  product-ui-designer.yaml  solution-architect.yaml
items/: WI-001.md  WI-002.md  WI-003.md  WI-004.md  WI-005.md  WI-006.md  WI-007.md  WI-008.md  WI-009.md  WI-010.md  WI-011.md
messages/: msg-005ca512-347e-46a9-bb96-c7e3fd90a6f1.yaml  msg-0553999a-1a36-4add-8a66-3e8e8ec59f2f.yaml  msg-05b9d20a-1b0f-4612-a61c-e19ab09cf67c.yaml  msg-096c5549-d525-4f3b-b139-013f5dc74ef6.yaml  (+61 more)
runs/WI-001/solution-architect/supporting-files/skeleton/apps/api/: alembic.ini  package.json  pyproject.toml  tsconfig.json
runs/WI-001/solution-architect/supporting-files/skeleton/apps/api/migrations/: env.py
runs/WI-001/solution-architect/supporting-files/skeleton/apps/api/migrations/versions/: 0001_initial.py
runs/WI-001/solution-architect/supporting-files/skeleton/apps/api/src/: app.test.ts  app.ts  config.ts  server.ts
runs/WI-001/solution-architect/supporting-files/skeleton/apps/api/src/littleduck_api/: __init__.py  bootstrap_admin.py  config.py  context.py  db.py  engine.py  main.py  models.py  recovery.py  repository.py  schemas.py  security.py  service.py  time.py
runs/WI-001/solution-architect/supporting-files/skeleton/apps/api/src/modules/: README.md
runs/WI-001/solution-architect/supporting-files/skeleton/apps/api/tests/: test_contract_subset.py  test_recovery_and_utc.py  test_security.py  test_session_ordering_context.py  test_vertical_slice.py
(+58 files in other folders)
