[project]
name = "littleduck-api"
version = "0.1.0"
description = "LittleDuck MVP Python/FastAPI architecture slice"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic>=1.16,<2",
  "cryptography>=45,<48",
  "fastapi>=0.116,<1",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.17,<2",
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.1,<2",
  "pyyaml>=6,<7",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/littleduck_api"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"] # FastAPI dependency injection uses Depends() in parameter defaults.

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["littleduck_api"]
